--- a/index.html
+++ b/index.html
@@ -8,15 +8,33 @@
         body {
             font-family: Arial, sans-serif;
             margin: 0;
-            padding: 20px;
+            padding: 40px;
+            background-color: #f5f5f5;
+            line-height: 1.6;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            background-color: white;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
         h1 {
-            color: #333;
+            color: #2c3e50;
+            margin-bottom: 20px;
+            border-bottom: 2px solid #eee;
+            padding-bottom: 10px;
+        }
+        p {
+            color: #555;
         }
     </style>
 </head>
 <body>
-    <h1>Welcome to New Publik Test</h1>
-    <p>This is a simple test page. More content coming soon!</p>
+    <div class="container">
+        <h1>Welcome to New Publik Test</h1>
+        <p>This is a simple test page. More content coming soon!</p>
+    </div>
 </body>
 </html>
